# thomas_utils

./: LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: diagnose_install.py
tests/: __init__.py  test_cli.py  test_convert.py  test_pptx.py
thomas_utils/: __init__.py  __main__.py  cli.py
thomas_utils/converters/: __init__.py  marker_impl.py  pptx_impl.py  pptx_unstructured_impl.py  pymupdf_impl.py  registry.py
